--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -150,7 +150,7 @@
                 </ol></div>
             </div>
             <div class="sell">
-                <a href="/email/" id="">Хочу продать!</a>
+                <a href="/email/" id=""><img src="~/Content/images/tosell.png"</a>
             </div>
         </div>
     </div>
@@ -184,7 +184,7 @@
                 <li><img src="~/Content/images/1.png?format=jpg&quality=70" width="1500px" height="380px"></li>
                 <li><img src="~/Content/images/2.png?format=jpg&quality=70" width="1500px" height="380px"></li>
                 <li><img src="~/Content/images/3.png?format=jpg&quality=70" width="1500px" height="380px"></li>
-                <li><img src="~/Content/images/4.png?format=jpg&quality=70" width="1500px" height="380px"></li>
+                <li><iframe width="1500" height="380" src="https://www.youtube.com/embed/gH3NfPbh42Q" frameborder="0" allowfullscreen></iframe></li>
             </ul>
         </div>
     </div>
