--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -189,10 +189,9 @@ body {
 }
 
     .form-search input {
-        width: 500px;
         height: 29px;
         padding: 0 10px 0 10px;
-        border: 1px solid #747474;
+        border: 1px solid rgba(243, 243, 249, 0.5);
         font-family: Casper;
         font-size: 16px;
         -webkit-box-sizing: border-box;
@@ -206,16 +205,19 @@ body {
             border: none;
             background: url(images/search.png) no-repeat 50% 50%;
             background-color: #fff;
-            border: 1px solid #747474;
-            margin-left: -4px;
-            border-radius: 0 10px 10px 0;
+             border: 1px solid rgba(243, 243, 249, 0.5);
+            margin-left: -2px;
             cursor: pointer;
+            background-color:transparent;
         }
 
         .form-search input[type="text"] {
-            border-radius: 10px 0 0 10px;
+            width: 240px;
+            border-radius: 0;
+            background-color:transparent;
+            color: #ffffff;
         }
-
+        
 .your_name {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -269,9 +271,11 @@ body {
     margin-left: 0;
     margin-top: 0;
     color: #fff;
-    font-family: "Casper";
-    font-weight: 600;
-    font-size: 18px;
+    color: #ffffff;
+font-family: "Proxima Nova";
+font-size: 12px;
+font-weight: 700;
+text-transform: uppercase;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
@@ -309,60 +313,60 @@ body {
 }
 
 .social .vk {
-    height: 39px;
-    width: 39px;
+    height: 50px;
+    width: 50px;
     background-image: url('images/vk.png');
     background-repeat: no-repeat;
 }
 
-    .social .vk:hover {
+    /*.social .vk:hover {
         height: 39px;
         width: 39px;
         background-image: url('images/vk-g.png');
         display: block;
-    }
+    }*/
 
 .social .fb {
-    height: 39px;
-    width: 39px;
+    height: 50px;
+    width: 50px;
     background-image: url('images/fb.png');
     background-repeat: no-repeat;
 }
 
-    .social .fb:hover {
+    /*.social .fb:hover {
         height: 39px;
         width: 39px;
         background-image: url('images/fb-g.png');
         display: block;
-    }
+    }*/
 
 .social .yt {
-    height: 39px;
-    width: 39px;
+    height: 50px;
+    width: 50px;
     background-image: url('images/youtube.png');
     background-repeat: no-repeat;
 }
 
-    .social .yt:hover {
+    /*.social .yt:hover {
         height: 39px;
         width: 39px;
         background-image: url('images/youtube_hover.png');
         display: block;
-    }
+    }*/
 
 .social .gmail {
-    height: 39px;
-    width: 39px;
+    height: 50px;
+    width: 50px;
     background-image: url('images/gmail.png');
     background-repeat: no-repeat;
 }
 
-    .social .gmail:hover {
+    /*.social .gmail:hover {
         height: 39px;
         width: 39px;
         background-image: url('images/gmail-g.png');
         display: block;
-    }
+    }*/
 
 .header .feedback {
     display: -webkit-box;
@@ -578,26 +582,11 @@ body {
 }
 
 #nav .sell {
-    margin-left: 1286px;
-    margin-top: -50px;
+   margin-left: 1113px;
+    margin-top: -78px;
 }
-
-    #nav .sell a {
-        position: relative;
-        padding: 11px 24px 13px 24px;
-        background-color: #123360;
-        text-decoration: none;
-        border-radius: 10px;
-        -webkit-box-shadow: inset 0 0 9px rgba(255,255,255,.35);
-        box-shadow: inset 0 0 9px rgba(255,255,255,.35);
-        color: #fff;
-        font-family: Casper;
-        font-size: 18px;
-    }
-
-        #nav .sell a:hover {
-            opacity: 1;
-            color: #ffd700;
+#nav .sell img:hover {
+            opacity: 0.8;
         }
 
 .h1 {
