--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -91,9 +91,10 @@
         </div>
         <div class="contactinfo">
             <div class="tel">
-                    <img src="~/Content/images/tel.png">
-                    <p>+38093 057 7110</p>
-                    <p>+38048 788 6707</p>
+                <div class="number">
+                    <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38093 057 7110</p></div>
+                    <div><img src="~/Content/images/tel.png" style="width:10px" height="10px"><p>+38048 788 6707</p></div>
+                </div>
             </div>
         </div>
         <div class="feedback">
@@ -232,12 +233,9 @@
                     <a href="/cart/" id="fav1"></a>
                 </div>
                 <div class="tel">
-                    <div class="imgtel">
-                        <img src="~/Content/images/tel.png">
-                    </div>
                     <div class="number">
-                        <p>+38093 057 7110</p>
-                        <p>+38048 788 6707</p>
+                        <div><img src="~/Content/images/tel.png"><p>+38093 057 7110</p></div>
+                        <div><img src="~/Content/images/tel.png"><p>+38048 788 6707</p></div>
                     </div>
                 </div>
             </div>
