--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -705,32 +705,64 @@ text-transform: uppercase;
 .d-carousel .redimg {
     position: absolute;
     z-index: 10000;
-    width: 70px;
-    height: 70px;
-    margin-left: 180px;
+    margin-left: 224px;
+    margin-top: -15px;
 }
 
 .d-carousel {
     margin-left: 181px;
 }
-
-    .d-carousel h3 {
-        color: #fff;
-        font-family: "Casper";
-        font-size: 19px;
-        font-weight: 600;
-        margin-top: 10px;
-        text-align: center;
+.d-carousel a {
+    text-decoration:none;
+}
+.d-carousel ul li .meters {
+    display:flex;
+    flex-direction:row;
+    margin-top:23px;
+    margin-bottom:41px;
+}
+    .d-carousel ul li .meters p {
+        color: #020107;
+        font-family: "ProximaNova";
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;        
+    }
+    .d-carousel ul li .meters div img {
+        margin-right:15px;    
+    }
+    .d-carousel ul li .meters div {
+        display:flex;
+        flex-direction:row; 
+        padding:0 67px 0 10px;    
+    }
+    .d-carousel ul li .meters p sup {
+        font-size: 12px;
+        margin-bottom:5px;
     }
 
-    .d-carousel h4 {
-        margin: 5px 10px 0 15px;
-        color: #fff;
-        font-family: Casper;
-        font-size: 12px;
-        width: 215px;
+    .d-carousel h3 {      
+        color: #3e3e3e;
+        font-family: "ProximaNova";
+        font-size: 24px;
+        font-weight: 800;
+            margin-top: 30px;
+         margin-left: 29px;
+    }
+
+    .d-carousel h4 {   
+        color: #3e3e3e;
+        font-family: "MyriadPro";
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 30px;
         overflow: hidden;
-        text-align: center;
+        margin-left: 29px;
+        margin-top: 5px;
+        margin-bottom:28px;
+    }
+    .d-carousel h4 img {
+        margin-right:5px;
     }
 
     .d-carousel .jcarousel-container {
@@ -739,15 +771,15 @@ text-transform: uppercase;
     }
 
     .d-carousel .jcarousel-item {
-        width: 251px;
-        height: 353px;
+        width: 390px;
+        height: 441px;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
     }
 
     .d-carousel .jcarousel-container-horizontal {
-        width: 1055px;
-        height: 353px;
+        width: 1200px;
+        height: 482px;
         padding: 0 45px;
         margin-bottom: 25px;
     }
@@ -755,6 +787,8 @@ text-transform: uppercase;
     .d-carousel .jcarousel-item-horizontal {
         margin-left: 3px;
         margin-right: 11px;
+        border: 1px solid #e5e5f8;
+        background-color:#fff;
     }
 
     .d-carousel .jcarousel-next-horizontal {
