--- a/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_Layout.cshtml
@@ -155,7 +155,11 @@
             </div>
         </div>
     </div>
+
+
+
     <div class="container" id="container">
+        <!--
         <div id="slidebox">
             <div class="textinslider">
                 <div class="h1">
@@ -176,10 +180,10 @@
             <div class="next"></div>
             <div class="previous"></div>
             <div class="thumbs">
-                <a href="#" onclick="" class="1 thumbActive" id="a"></a> <!-- ◯ -->
-                <a href="#" onclick="" class="2" id="b"></a> <!-- ◯ -->
-                <a href="#" onclick="" class="3" id="c"></a> <!-- ◯ -->
-                <a href="#" onclick="" class="4" id="d"></a> <!-- ◯ -->
+                <a href="#" onclick="" class="1 thumbActive" id="a"></a> 
+                <a href="#" onclick="" class="2" id="b"></a> 
+                <a href="#" onclick="" class="3" id="c"></a> 
+                <a href="#" onclick="" class="4" id="d"></a> 
             </div>
             <ul class="listofimg">
                 <li><img src="~/Content/images/1.png?format=jpg&quality=70" width="1500px" height="380px"></li>
@@ -249,6 +253,7 @@
             </p>
         </div>
     </div>
+            -->
     <div class="container" id="container">
         @RenderBody()
         @if (ViewBag.Articles != null)
