--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -709,18 +709,49 @@ text-transform: uppercase;
     margin-top: -15px;
 }
 
-.d-carousel {
-    margin-left: 181px;
-}
 .d-carousel a {
     text-decoration:none;
 }
 .d-carousel ul li .meters {
     display:flex;
     flex-direction:row;
-    margin-top:23px;
-    margin-bottom:41px;
+    margin-top:9px;
+    margin-bottom:9px;
 }
+    .d-carousel ul li:hover {
+        -webkit-transform: scale(1.03);
+         -moz-transform: scale(1.03);
+         -o-transform: scale(1.03);
+          -moz-transition: all 0.8s ease-out;
+         -o-transition: all 0.8s ease-out;
+         -webkit-transition: all 0.8s ease-out;
+         box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+.d-carousel ul li .bottom {
+    display:flex;
+    flex-direction:row;
+}
+    .d-carousel ul li .bottom div {
+        border: 1px solid #e5e5f8;
+    }
+    .d-carousel ul li .bottom div img:hover {
+        box-shadow: 0 0 10px rgba(228, 164, 14, 0.45);
+        background-color:rgba(228, 164, 14, 0.25);
+        border-radius:7px;
+    }
+    .d-carousel ul li .bottom p.cost {
+        padding:22px 0 18px 23px;
+        width:224px;
+        border-right:none;
+    }
+    .d-carousel ul li .bottom .share {
+        padding:18px;
+         border-right:none;
+    }
+.d-carousel ul li .bottom .like {
+        padding:18px;
+         border-right:none;
+    }
     .d-carousel ul li .meters p {
         color: #020107;
         font-family: "ProximaNova";
@@ -780,8 +811,9 @@ text-transform: uppercase;
     .d-carousel .jcarousel-container-horizontal {
         width: 1200px;
         height: 482px;
-        padding: 0 45px;
         margin-bottom: 25px;
+        margin: auto;
+        padding-top:76px;
     }
 
     .d-carousel .jcarousel-item-horizontal {
@@ -793,65 +825,70 @@ text-transform: uppercase;
 
     .d-carousel .jcarousel-next-horizontal {
         position: absolute;
-        top: 149px;
+        top: 0px;
         right: 0;
-        margin-right: 3px;
         width: 30px;
         height: 30px;
         cursor: pointer;
-        background: transparent url(style/images/next.png) no-repeat top right;
+        background: transparent url(images/next.png) no-repeat top right;
     }
 
-        .d-carousel .jcarousel-next-horizontal:hover {
+        /*.d-carousel .jcarousel-next-horizontal:hover {
             background: transparent url(style/images/next-g.png) no-repeat top right;
-        }
+        }*/
 
     .d-carousel .jcarousel-prev-horizontal {
         position: absolute;
-        top: 149px;
-        left: 0;
-        margin-left: 3px;
+        top: 0px;
+        right: 36px;
         width: 30px;
         height: 30px;
         cursor: pointer;
-        background: transparent url(style/images/prev.png) no-repeat top left;
+        background: transparent url(images/prev.png) no-repeat top left;
     }
 
-        .d-carousel .jcarousel-prev-horizontal:hover {
+        /*.d-carousel .jcarousel-prev-horizontal:hover {
             background: transparent url(style/images/prev-g.png) no-repeat top left;
-        }
+        }*/
 
     .d-carousel h2 {
         margin-top: 35px;
         margin-left: 46px;
         margin-bottom: 9px;
-        color: #fff;
-        font-family: "Century Gothic";
-        font-family: "Century Gothic",CenturyGothic,AppleGothic,sans-serif;
-        font-size: 24px;
+        color: #114a82;
+        font-family: "ProximaNova";
+        font-size: 30px;
         font-weight: 700;
-        text-transform: uppercase;
+        text-transform:uppercase;
+    }
+    .d-carousel h2 span {
+        color: #f9a320;
     }
 
     .d-carousel #more {
-        padding: 11px 469px 10px 474px;
-        border-radius: 10px;
-        background: none;
-        border: 1px solid #fff;
-        color: #fff;
-        font-family: "Century Gothic";
-        font-size: 18px;
-        font-weight: 700;
+      display: block;
+        width: 390px;
+        padding: 6px 0px 6px 0px;
         text-decoration: none;
-        margin-left: 46px;
+        color: #ffffff;
+        font-family: "ProximaNova";
+        font-size: 20px;
+        font-weight: 700;
+        line-height: 34px;
+        text-transform: uppercase;
+        text-align: center;
+        background-color: #114a82;
+        letter-spacing: 1.5px;
+        right: 0;
+        margin-right: 0;
+        margin-left: 958px;
     }
 
         .d-carousel #more:hover {
-            background-image: -webkit-gradient(linear,left bottom,left top,from(#797f2b),color-stop(13.5%,#959958),color-stop(50%,#fff),color-stop(86.5%,#f9feb1),to(#f6fea3));
-            background-image: linear-gradient(to top,#797f2b 0%,#959958 13.5%,#fff 50%,#f9feb1 86.5%,#f6fea3 100%);
-            color: #213b64;
-            -webkit-transition: .5s ease;
-            transition: .5s ease;
+            -webkit-transition: .8s ease;
+            transition: .8s ease;
+            background-color: #f9a320;
+            color:#114a82;
         }
 
     .d-carousel ul li img {
@@ -864,79 +901,15 @@ text-transform: uppercase;
         font-size: 0;
     }
 
-.min-content {
-    width: 249px;
-    height: 135px;
-    border: 1px solid #fff;
-    position: relative;
+
+.cost {  
+    color: #114a82;
+    font-family: "ProximaNova";
+    font-size: 24px;
+    font-weight: 700;
 }
 
-    .min-content .like {
-        position: absolute;
-        top: 91px;
-        right: 212px;
-        background-image: url(images/like.png);
-        display: block;
-        width: 32px;
-        height: 32px;
-        cursor: pointer;
-    }
 
-        .min-content .like:hover, .min-content .liked {
-            position: absolute;
-            top: 91px;
-            right: 212px;
-            background-image: url(images/liked.png);
-            display: block;
-            width: 32px;
-            height: 32px;
-            cursor: pointer;
-        }
-
-        .min-content .like:hover {
-            background-image: url(images/like_hover.png);
-            display: block;
-            width: 32px;
-            height: 32px;
-        }
-
-.cost {
-    color: #fff;
-    font-family: "Casper";
-    font-size: 13.5px;
-    font-weight: 600;
-    padding: 8px 20px;
-    background-color: none;
-    margin-top: 14px;
-    text-align: center;
-    width: 111px;
-    border: 1px solid #fff;
-    border-radius: 10px;
-    display: inline-block;
-    position: absolute;
-    left: 50px;
-    top: 77px;
-}
-
-#follow {
-    padding: 19px 10px;
-    border-top: 1px solid #fff;
-    border-left: 1px solid #fff;
-    color: #fff;
-    text-decoration: none;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-}
-
-    #follow:hover {
-        color: #213b64;
-        font-weight: 600px;
-        background-image: -webkit-gradient(linear,left bottom,left top,from(#797f2b),color-stop(13.5%,#959958),color-stop(50%,#fff),color-stop(86.5%,#f9feb1),to(#f6fea3));
-        background-image: linear-gradient(to top,#797f2b 0%,#959958 13.5%,#fff 50%,#f9feb1 86.5%,#f6fea3 100%);
-        -webkit-transition: .4s ease;
-        transition: .4s ease;
-    }
 
 .streak {
     margin: 0;
