--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 }
 <div class="slider-of-products">
     <div class="d-carousel" id="p">
-        <h2>Горячие предложения</h2>
+        <h2><span>Горячие</span> предложения</h2>
         <ul class="carousel">
             @foreach (var item in Model.NewBuildingAdverts)
             {
@@ -43,129 +43,134 @@
                         <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
                         <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
                         <div class="meters">
-                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м<sup>2</sup></p></div>
-                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м<sup>2</sup></p></div>
+                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
+                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
                         </div>
                         <div class="bottom">
-                            <p class="cost">от @item.Price грн/м²</p>
-                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
+                            <div><p class="cost">150000 $</p></div>
+                            <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                         </div>
                     </a>
                 </li>
             }
         </ul>
-        <a href="/sale/flat/" class="moremore" id="more">Подробнее</a>
+        <a href="/sale/flat/" class="moremore" id="more">Смотреть больше</a>
     </div>
     <div class="streak"></div>
 
     <div class="d-carousel" id="p">
-        <h2>Новострои</h2>
+        <h2><span>Квартиры</span> в Новостроях</h2>
         <ul class="carousel">
             @foreach (var item in Model.NewBuildingAdverts)
             {
                 <li>
                     <a href="">
 
-                        <h3>@item.Name</h3>
-                        <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
-                        <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                        <img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" />
-                            <div class="meters">
-                                <p>350м<sup>2</sup></p>
-                                <p>350м<sup>2</sup></p>
-                            </div>
-                            <div class="bottom">
-                                <p class="cost">от @item.Price грн/м²</p>
-                                <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
-                            </div>
+                        <h3>Продам дом</h3>
+                        <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
+                        <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
+                        <div class="meters">
+                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
+                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
+                        </div>
+                        <div class="bottom">
+                            <div><p class="cost">150000 $</p></div>
+                            <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
+                        </div>
                     </a>
                 </li>
             }
-            </ul>
-            <a href="/newbuilding/" id="more">Подробнее</a>
+        </ul>
+            <a href="/newbuilding/" id="more">Смотреть больше</a>
         </div>
     <div class="streak"></div>
 
     <div class="d-carousel" id="p">
-        <h2>Продажа квартир</h2>
+        <h2><span>Продажа</span> квартир</h2>
         <ul class="carousel">
             @foreach (var item in Model.NewBuildingAdverts)
             {
                 <li>
                     <a href="">
 
-                        <h3>@item.Name</h3>
-                        <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
-                        <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                        <img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" />
+                        <h3>Продам дом</h3>
+                        <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
+                        <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
                         <div class="meters">
-                            <p>350м<sup>2</sup></p>
-                            <p>350м<sup>2</sup></p>
+                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
+                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
                         </div>
                         <div class="bottom">
-                            <p class="cost">от @item.Price грн/м²</p>
-                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
+                            <div><p class="cost">150000 $</p></div>
+                            <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                         </div>
                     </a>
                 </li>
             }
         </ul>
-        <a href="/sale/flat/" id="more">Подробнее</a>
+        <a href="/sale/flat/" id="more">Смотреть больше</a>
     </div>
     <div class="streak"></div>
 
     <div class="d-carousel" id="p">
-        <h2>Продажа домов и участков</h2>
+        <h2><span>Продажа</span> домов и участков</h2>
         <ul class="carousel">
             @foreach (var item in Model.NewBuildingAdverts)
             {
                 <li>
                     <a href="">
 
-                        <h3>@item.Name</h3>
-                        <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
-                        <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                        <img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" />
+                        <h3>Продам дом</h3>
+                        <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
+                        <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
                         <div class="meters">
-                            <p>350м<sup>2</sup></p>
-                            <p>350м<sup>2</sup></p>
+                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
+                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
                         </div>
                         <div class="bottom">
-                            <p class="cost">от @item.Price грн/м²</p>
-                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
+                            <div><p class="cost">150000 $</p></div>
+                            <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                         </div>
                     </a>
                 </li>
             }
         </ul>
-        <a href="/sale/house/" id="more">Подробнее</a>
+        <a href="/sale/house/" id="more">Смотреть больше</a>
     </div>
 
     <div class="d-carousel" id="p">
-        <h2>Продажа квартир</h2>
+        <h2><span>Коммерческая</span> недвижимость</h2>
         <ul class="carousel">
             @foreach (var item in Model.NewBuildingAdverts)
             {
                 <li>
                     <a href="">
 
-                        <h3>@item.Name</h3>
-                        <h4>@item.Adress <br />Сдача: @item.ExpluatationDate.Name</h4>
-                        <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
-                        <img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" />
+                        <h3>Продам дом</h3>
+                        <h4><img src="~/Content/images/pin.png" height="13" alt="" />@item.Adress</h4>
+                        <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        <img src="~/Content/images/prod1.jpg" width="390" height="200" alt="" />
                         <div class="meters">
-                            <p>350м<sup>2</sup></p>
-                            <p>350м<sup>2</sup></p>
+                            <div><img src="~/Content/images/m2.png" height="32" alt="" /><p>350м²</p></div>
+                            <div><img src="~/Content/images/m21.png" height="32" alt="" /><p>150м²</p></div>
                         </div>
                         <div class="bottom">
-                            <p class="cost">от @item.Price грн/м²</p>
-                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"></div>
+                            <div><p class="cost">150000 $</p></div>
+                            <div class="share"><img src="~/Content/images/share.png" height="32" alt="" /></div>
+                            <div class="like" onclick="addtocart(@item.Id, '@AdvertsType.NewBuilding', true, this);"><img src="~/Content/images/star.png" height="32" alt="" /></div>
                         </div>
                     </a>
                 </li>
             }
         </ul>
-        <a href="/sale/flat/" id="more">Подробнее</a>
+        <a href="/sale/flat/" id="more">Смотреть больше</a>
     </div>
 
 </div>
